2818 [Jobs]                 added option to pause/resume jobs
2817 [HD Streams Extractor] improved deletion of log and gaps files
2816 [Jobs]                 aborting a job also deletes the temporary files assigned to it
2815 [MessageBoxEx]         cosmetics
2813 [x265]                 added support for --tune grain
2812 [OneClick]             fixed not updating the output folder path properly (regression of 2807)
2811 [OneClick]             fixed "-" button behaviour if only one track is available (regression of 2808)
2810                        added High DPI support

Changelog 2774 --> 2808

Features/Changes:
[AVS Script Creator]   DirectShowSource/AVISource are disabled by default and have to be enabled in the MeGUI settings
[File Indexer]         added MPLS support
[OneClick]             added support for MKV attachments. If the MKV source does have such attachments, it will be copied to the target MKV. feature request #617
[Xvid]                 added a workaround to be able to use Xvid in portable AviSynth mode
[Update]               added a first start-up question if the updater should be enabled or disabled (message will be shown also once to existing users)
                       if disabled no downloads will be made without confirmation. therefore e.g. no information of new updates will be available.

Enhancements/Fixes:
[AVS Script Creator]   fixed DirectShowSource/AVISource not available if the portable AviSynth is used (regression of 2761). bug #896
[AVS Script Creator]   improved the file extension filters of the "video input" file open dialogue
[Chapter]              fixed non-ASCII handling (regression of 2753). bug #898
[L-SMASH Indexer]      improved detection of LSMASH/LWLibav (regression of 2767). bug #899


Known Problems:
- Windows Vista and older is not supported
- Unicode is not supported
- M2TS bitrate calculator does not calculate correct values as the specifications are unknown

Full changelog: 