@@ -33,15 +33,14 @@ namespace MeGUI.core.gui
             this.progressBar1 = new System.Windows.Forms.ProgressBar();
             this.contextMenuStrip1 = new System.Windows.Forms.ContextMenuStrip(this.components);
             this.startEncodingToolStripMenuItem = new System.Windows.Forms.ToolStripMenuItem();
+            this.pauseResumeToolStripMenuItem = new System.Windows.Forms.ToolStripMenuItem();
             this.stopToolStripMenuItem = new System.Windows.Forms.ToolStripMenuItem();
             this.abortToolStripMenuItem = new System.Windows.Forms.ToolStripMenuItem();
             this.shutDownLaterToolStripMenuItem = new System.Windows.Forms.ToolStripMenuItem();
             this.shutDownToolStripMenuItem = new System.Windows.Forms.ToolStripMenuItem();
             this.toolStripSeparator1 = new System.Windows.Forms.ToolStripSeparator();
             this.showProgressWindowToolStripMenuItem = new System.Windows.Forms.ToolStripMenuItem();
-            this.showQueueToolStripMenuItem = new System.Windows.Forms.ToolStripMenuItem();
             this.renameToolStripMenuItem = new System.Windows.Forms.ToolStripMenuItem();
-            this.pauseResumeToolStripMenuItem = new System.Windows.Forms.ToolStripMenuItem();
             this.workerNameAndJob.SuspendLayout();
             this.contextMenuStrip1.SuspendLayout();
             this.SuspendLayout();
@@ -77,10 +76,9 @@ namespace MeGUI.core.gui
             this.shutDownToolStripMenuItem,
             this.toolStripSeparator1,
             this.showProgressWindowToolStripMenuItem,
-            this.showQueueToolStripMenuItem,
             this.renameToolStripMenuItem});
             this.contextMenuStrip1.Name = "contextMenuStrip1";
-            this.contextMenuStrip1.Size = new System.Drawing.Size(288, 230);
+            this.contextMenuStrip1.Size = new System.Drawing.Size(288, 208);
             this.contextMenuStrip1.Opening += new System.ComponentModel.CancelEventHandler(this.contextMenuStrip1_Opening);
             // 
             // startEncodingToolStripMenuItem
@@ -89,6 +87,13 @@ namespace MeGUI.core.gui
             this.startEncodingToolStripMenuItem.Size = new System.Drawing.Size(287, 22);
             this.startEncodingToolStripMenuItem.Text = "Start worker";
             this.startEncodingToolStripMenuItem.Click += new System.EventHandler(this.startEncodingToolStripMenuItem_Click);
+            // 
+            // pauseResumeToolStripMenuItem
+            // 
+            this.pauseResumeToolStripMenuItem.Name = "pauseResumeToolStripMenuItem";
+            this.pauseResumeToolStripMenuItem.Size = new System.Drawing.Size(287, 22);
+            this.pauseResumeToolStripMenuItem.Text = "Suspend worker";
+            this.pauseResumeToolStripMenuItem.Click += new System.EventHandler(this.pauseResumeToolStripMenuItem_Click);
             // 
             // stopToolStripMenuItem
             // 
@@ -130,26 +135,12 @@ namespace MeGUI.core.gui
             this.showProgressWindowToolStripMenuItem.Text = "Show progress window";
             this.showProgressWindowToolStripMenuItem.Click += new System.EventHandler(this.showProgressWindowToolStripMenuItem_Click);
             // 
-            // showQueueToolStripMenuItem
-            // 
-            this.showQueueToolStripMenuItem.Name = "showQueueToolStripMenuItem";
-            this.showQueueToolStripMenuItem.Size = new System.Drawing.Size(287, 22);
-            this.showQueueToolStripMenuItem.Text = "Show queue";
-            this.showQueueToolStripMenuItem.Click += new System.EventHandler(this.showQueueToolStripMenuItem_Click);
-            // 
             // renameToolStripMenuItem
             // 
             this.renameToolStripMenuItem.Name = "renameToolStripMenuItem";
             this.renameToolStripMenuItem.Size = new System.Drawing.Size(287, 22);
             this.renameToolStripMenuItem.Text = "Rename worker";
             this.renameToolStripMenuItem.Click += new System.EventHandler(this.renameToolStripMenuItem_Click);
-            // 
-            // pauseResumeToolStripMenuItem
-            // 
-            this.pauseResumeToolStripMenuItem.Name = "pauseResumeToolStripMenuItem";
-            this.pauseResumeToolStripMenuItem.Size = new System.Drawing.Size(287, 22);
-            this.pauseResumeToolStripMenuItem.Text = "Suspend worker";
-            this.pauseResumeToolStripMenuItem.Click += new System.EventHandler(this.pauseResumeToolStripMenuItem_Click);
             // 
             // IndividualWorkerSummary
             // 
@@ -179,7 +170,6 @@ namespace MeGUI.core.gui
         private System.Windows.Forms.ToolStripMenuItem stopToolStripMenuItem;
         private System.Windows.Forms.ToolStripMenuItem shutDownToolStripMenuItem;
         private System.Windows.Forms.ToolStripMenuItem showProgressWindowToolStripMenuItem;
-        private System.Windows.Forms.ToolStripMenuItem showQueueToolStripMenuItem;
         private System.Windows.Forms.ToolStripMenuItem shutDownLaterToolStripMenuItem;
         private System.Windows.Forms.ToolStripSeparator toolStripSeparator1;
         private System.Windows.Forms.ToolStripMenuItem pauseResumeToolStripMenuItem;
